# math-comp-polyglot

./: .gitignore  CLAUDE.md  README.md  clean.sh  generate_report.py  index.html  run_all.sh
cpp/: CMakeLists.txt  benchmark.cpp
go/: benchmark.go  go.mod
haskell/: haskell-bench.cabal
haskell/app/: Main.hs
julia/: benchmark.jl
numba_bench/: benchmark.py
octave/: benchmark.m
python/: benchmark.py
python_pandas/: benchmark.py
python_polars/: benchmark.py
r/: benchmark.R
results/: cpp_results.json  go_results.json  haskell_results.json  julia_results.json  numba_results.json  octave_results.json  python_numpy_results.json  python_pandas_results.json  python_polars_results.json  python_results.json  r_results.json  rust_results.json  swift_results.json
rust/: Cargo.toml
rust/src/: main.rs
swift/Sources/: main.swift
