cabal-version: 2.4
name:          haskell-bench
version:       0.1.0.0

executable haskell-bench
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-T
  build-depends:
      base       >= 4.14
    , hmatrix    >= 0.20
    , clock      >= 0.8
    , random     >= 1.2
    , deepseq    >= 1.4
    , directory  >= 1.3
    , vector-algorithms  >= 0.9
    , vector             >= 0.13
