[package]
name = "math-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
nalgebra = { version = "0.33", features = ["rand"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
realfft = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
